# SGE

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  embed_font.py  embed_shaders.py
assets/shaders/d3d11/: blit.hlsl  blur.hlsl  font.hlsl  shape.hlsl  shape_ui.hlsl
assets/shaders/d3d12/: shape.hlsl  sprite.hlsl
assets/shaders/metal/: sprite.metal
assets/shaders/opengl/: sprite.vert
assets/shaders/vulkan/: font.vert  sprite.vert
examples/: CMakeLists.txt  common.hpp
examples/bloom/: CMakeLists.txt
examples/bloom/shaders/: basic.slang
examples/bloom/src/: app.cpp  app.hpp  main.cpp  shaders.hpp
examples/clay_integration/: CMakeLists.txt
examples/clay_integration/src/: app.cpp  app.hpp  assets.cpp  assets.hpp  clay.h  clay.hpp  game.cpp  game.hpp  main.cpp
examples/clock/: CMakeLists.txt
examples/clock/src/: app.cpp  app.hpp  game.cpp  main.cpp
examples/stresstest/: CMakeLists.txt
examples/stresstest/src/: app.cpp  app.hpp  main.cpp
examples/text/: CMakeLists.txt
examples/text/src/: app.cpp  app.hpp
examples/vector/: CMakeLists.txt
examples/vector/src/: app.cpp  app.hpp  main.cpp
include/SGE/: assert.hpp  defines.hpp  engine.hpp  input.hpp  log.hpp  macros.hpp  profile.hpp  utils.hpp  window_manager.hpp
include/SGE/math/: consts.hpp  math.hpp  quat.hpp  quaternion.hpp  rect.hpp
include/SGE/renderer/: batch.hpp  camera.hpp  context.hpp  custom_surface.hpp  dependency_graph.hpp  framebuffer_pool.hpp  glfw_surface.hpp  glfw_window.hpp  macros.hpp  renderer.hpp  renderer2d.hpp  resource.hpp  types.hpp  utils.hpp
include/SGE/renderer/imgui/backend/: backend.hpp
include/SGE/time/: stopwatch.hpp  time.hpp  timer.hpp
include/SGE/types/: anchor.hpp  animation.hpp  attributes.hpp  backend.hpp  binding_layout.hpp  blend_mode.hpp  color.hpp  config.hpp  cursor_mode.hpp  font.hpp  framebuffer.hpp  glyph.hpp  nine_patch.hpp  order.hpp  path.hpp  render_layer.hpp  rich_text.hpp  sampler.hpp  shader_def.hpp  shader_path.hpp  shader_pipeline.hpp  shader_type.hpp  shape.hpp  size.hpp  sprite.hpp  texture.hpp  texture_atlas.hpp  transform.hpp  window_settings.hpp
include/SGE/utils/: alloc.hpp  bitflags.hpp  gradient.hpp  hash.hpp  io.hpp  llgl.hpp  random.hpp  string.hpp  text.hpp  utf8.hpp
include/SGE/utils/containers/: heaparray.hpp  swapbackvector.hpp
shader_compiler/: main.cpp
src/: assert.hpp  assets.cpp  assets.hpp  constants.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  input.cpp  input.hpp  log.hpp  main.cpp  ui.cpp  ui.hpp  utils.hpp
src/engine/: assert.hpp  defines.hpp  engine.hpp  engine.mm  input.cpp  input.hpp  log.hpp  utils.cpp  utils.hpp  window_manager.cpp
src/engine/math/: math.hpp  quat.hpp
src/engine/renderer/: batch.cpp  batch.hpp  camera.cpp  camera.hpp  context.cpp  custom_surface.hpp  custom_surface.mm  dependency_graph.cpp  framebuffer_pool.cpp  glfw_surface.mm  glfw_window.mm  imgui_renderer.cpp  imgui_renderer.hpp  renderer.cpp  renderer.hpp  renderer2d.cpp  resource.cpp  shaders.hpp  types.hpp
src/engine/renderer/imgui/backend/: backend.mm
src/engine/renderer/imgui/backend/d3d11/: d3d11_backend.cpp  d3d11_backend.hpp
src/engine/renderer/imgui/backend/d3d12/: d3d12_backend.hpp
src/engine/renderer/imgui/backend/metal/: metal_backend.hpp
src/engine/renderer/imgui/backend/opengl/: opengl_backend.hpp
src/engine/renderer/imgui/backend/vulkan/: vulkan_backend.hpp
src/engine/renderer/shaders/: bloom_composite.slang  bloom_downsample.slang  bloom_prefilter.slang  bloom_upsample.slang  common.slang  font.slang  fullscreen_triangle.slang  imgui.slang  line.slang  ninepatch.slang  shape.slang  sprite.slang  tonemap_aces.slang  vector.slang
src/engine/renderer/shaders/d3d11/: font.hlsl  line.hlsl  ninepatch.hlsl  shape.hlsl  sprite.hlsl
src/engine/renderer/shaders/metal/: font.metal  line.metal  ninepatch.metal  shape.metal  sprite.metal
src/engine/renderer/shaders/opengl/: font.frag  font.vert  line.frag  line.vert  ninepatch.frag  ninepatch.vert  shape.frag  shape.vert  sprite.frag
src/engine/renderer/shaders/vulkan/: font.frag  font.vert  line.frag  line.vert  ninepatch.frag  ninepatch.vert  shape.frag  shape.vert  sprite.frag  sprite.vert
src/engine/time/: stopwatch.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp
src/engine/types/: anchor.hpp  attributes.cpp  backend.hpp  color.hpp  config.hpp  default_font.cpp  font.cpp  font.hpp  glyph.hpp  order.hpp  path.cpp  render_layer.hpp  shader_def.hpp  shader_type.hpp  shape.hpp  sprite.hpp  texture.hpp  texture_atlas.cpp  texture_atlas.hpp  window_settings.hpp
src/engine/utils/: random.cpp  text.cpp  utf8.cpp
src/math/: math.cpp
src/renderer/: batch.hpp  camera.cpp  camera.h  custom_surface.hpp  renderer.cpp  renderer.hpp  types.hpp
src/time/: stopwatch.hpp  time.cpp  time.hpp  timer.hpp
src/types/: font.hpp  render_layer.hpp  render_target.hpp  shader_def.hpp  shader_type.hpp  shape.hpp  sprite.hpp  texture.hpp  window_settings.hpp
