cmake_minimum_required(VERSION 3.12)

project(SGE_EXAMPLES)

set(RELEASE_BUILD OFF)
set(DEBUG_INFO ON)

if(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
    set(RELEASE_BUILD ON)
    set(DEBUG_INFO ON)
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(RELEASE_BUILD ON)
    set(DEBUG_INFO OFF)
else()
    set(RELEASE_BUILD OFF)
    set(DEBUG_INFO ON)
endif()

if (RELEASE_BUILD)
    message(STATUS "Build Type: Release")
    if(MSVC)
        add_compile_options("/O2" "/Ob3" "/Qfast_transcendentals" "${BITCODE}")
        STRING(REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
        STRING(REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
        STRING(REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
        STRING(REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    else()
        add_compile_options(-O3)
        # add_compile_options(-fomit-frame-pointer)
        add_compile_options(-fno-exceptions)
        add_compile_options(-march=native)
    endif()
    set(DISABLE_FORCE_DEBUG_POSTFIX ON)
    # set(LLGL_BUILD_STATIC_LIB ON CACHE BOOL "")
    set(LLGL_ENABLE_DEBUG_LAYER OFF CACHE BOOL "" FORCE)
    set(LLGL_ENABLE_CHECKED_CAST OFF CACHE BOOL "" FORCE)
    set(LLGL_ENABLE_EXCEPTIONS OFF CACHE BOOL "" FORCE)
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
else()
    message(STATUS "Build Type: Debug")
    set(DISABLE_FORCE_DEBUG_POSTFIX OFF)
    set(LLGL_ENABLE_EXCEPTIONS ON CACHE BOOL "" FORCE)
endif()

if(DEBUG_INFO)
    message(STATUS "Debug Info: Enabled")
    if(MSVC)
        add_compile_options(/DEBUG)
    else()
        add_compile_options(-g3 -fno-omit-frame-pointer)
    endif()
else()
    message(STATUS "Debug Info: Disabled")
    if(NOT MSVC)
        add_compile_options(-g0 -fomit-frame-pointer)
    endif()
endif()

get_directory_property(CURRENT_FLAGS COMPILE_OPTIONS)

add_subdirectory(bloom)
add_subdirectory(clay_integration)
add_subdirectory(clock)
add_subdirectory(stresstest)

set(LLGL_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR} CACHE BOOL "" FORCE)

# Propagate compile options to parent directory
get_directory_property(PARENT_DIR PARENT_DIRECTORY)
if(PARENT_DIR)
    get_directory_property(parent_options "${PARENT_DIR}" COMPILE_OPTIONS)
    list(APPEND parent_options ${CURRENT_FLAGS})
    set_property(DIRECTORY "${PARENT_DIR}" PROPERTY COMPILE_OPTIONS "${parent_options}")
endif()